Update guitar-kit/index.html : facebook like button at bottom3

--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -618,7 +618,7 @@
             </p> -->
           </div>
 
-          <div style="padding-bottom: 50px;">
+          <div style="padding-top: 50px;">
             <div class="fb-like" data-href="https://www.facebook.com/GuitarChordPlus" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
           </div>
         </div>
