Update guitar-kit/index.html : fixed misword

--- a/Roast-Meister/index.html
+++ b/Roast-Meister/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:image" content="../img/preview/preview_guitar-kit.jpg" />
-    <meta property="og:site_name" content="canapio's portfolio :: Guitar Kit+ for iOS"/>
-    <meta name="title" content="canapio's portfolio :: Guitar Kit+ for iOS" />
+    <meta property="og:site_name" content="canapio's portfolio :: Roast Meister for iOS"/>
+    <meta name="title" content="canapio's portfolio :: Roast Meister for iOS" />
 
 
 
@@ -225,49 +225,15 @@
       </div>
     </nav>
 
-    <div class="prize prize_big">
-      <ul>
-        <li>
-          <img src="../img/prize_left.png" alt="prize_left" />
-          <div>한국 유료부문<br>음악 카테고리 1위 기록</div>
-          <img src="../img/prize_right.png" alt="prize_left" />
-        </li>
-        <li>
-          <img src="../img/prize_left.png" alt="prize_left" />
-          <div>한국 무료부문<br>음악 카테고리 1위 기록</div>
-          <img src="../img/prize_right.png" alt="prize_left" />
-        </li>
-        <li>
-          <img src="../img/prize_left.png" alt="prize_left" />
-          <div>"금주 베스트" 앱 선정</div>
-          <img src="../img/prize_right.png" alt="prize_left" />
-        </li>
-        <li>
-          <img src="../img/prize_left.png" alt="prize_left" />
-          <div>"새해, 새로운 당신" 앱 선정</div>
-          <img src="../img/prize_right.png" alt="prize_left" />
-        </li>
-        <li>
-          <img src="../img/prize_left.png" alt="prize_left" />
-          <div>"베스트 음악 App" 앱 선정</div>
-          <img src="../img/prize_right.png" alt="prize_left" />
-        </li>
-        <li>
-          <img src="../img/prize_left.png" alt="prize_left" />
-          <div>"비 오는 날" 앱 선정</div>
-          <img src="../img/prize_right.png" alt="prize_left" />
-        </li>
-      </ul>
-    </div>
 
     <div class="row">
       <div class="col-lg-3 col-sm-2 col-xs-0"></div>
       <div class="col-lg-6 col-sm-8 col-xs-12">
         <div class="row title">
-          Guitar Kit+
+          Roast Meister
         </div>
         <div class="row description">
-          Personal Project - 기획, 디자인, 개발, 배포
+          Personal Team Project - 디자인, 개발, 배포
           <div id="fb-root"></div>
           <script>(function(d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
@@ -280,98 +246,31 @@
         </div>
 
         <div class="appicon">
-          <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/GuitarKit+.png" alt="" /></a>
+          <a href="https://itunes.apple.com/app/id791551793"><img src="../img/app_icon/RoastMeister.png" alt="" /></a>
         </div>
 
-
-        <div class="prize prize_small">
-          <ul>
-            <li>
-              <img src="../img/prize_left.png" alt="prize_left" />
-              <div>한국 유료부문<br>음악 카테고리 1위 기록</div>
-              <img src="../img/prize_right.png" alt="prize_left" />
-            </li>
-            <li>
-              <img src="../img/prize_left.png" alt="prize_left" />
-              <div>한국 무료부문<br>음악 카테고리 1위 기록</div>
-              <img src="../img/prize_right.png" alt="prize_left" />
-            </li>
-            <li>
-              <img src="../img/prize_left.png" alt="prize_left" />
-              <div>"금주 베스트" 앱 선정</div>
-              <img src="../img/prize_right.png" alt="prize_left" />
-            </li>
-            <li>
-              <img src="../img/prize_left.png" alt="prize_left" />
-              <div>"새해, 새로운 당신" 앱 선정</div>
-              <img src="../img/prize_right.png" alt="prize_left" />
-            </li>
-            <li>
-              <img src="../img/prize_left.png" alt="prize_left" />
-              <div>"베스트 음악 App" 앱 선정</div>
-              <img src="../img/prize_right.png" alt="prize_left" />
-            </li>
-            <li>
-              <img src="../img/prize_left.png" alt="prize_left" />
-              <div>"비 오는 날" 앱 선정</div>
-              <img src="../img/prize_right.png" alt="prize_left" />
-            </li>
-          </ul>
-        </div>
 
         <div class="bodydiv">
           <h2>Overview</h2>
           <p>
-            Guitar Kit+는 아이폰, 아이패드를 지원하는 iOS용 어플리케이션입니다.
+
           </p>
           <p>
-            기타를 처음 하시는 분들을 위한 <b>트레이닝기능</b>, 모든 연습생에게 필수적인 <b>메트로놈기능</b>, 기타를 어느정도 하시는 분들을 위한 <b>코드검색 및 저장기능</b>이 준비되어 있습니다.
+
           </p>
           <p>
-            지금 바로 <b><a href="https://itunes.apple.com/app/id791551793">App Store</a></b>에서 다운로드 받으실 수 있습니다.
+            지금 바로 <b><a href="https://itunes.apple.com/app/id1083926026">App Store</a></b>에서 다운로드 받으실 수 있습니다.
           </p>
 
           <h2>Version History</h2>
-          <div id="version_history" style="display: none;">
+          <div id="version_history">
             <p>
-              <b>v2.21 (15.10.03)</b>
-              <ul>
-                <li>iOS9 지원</li>
-              </ul>
-            </p><p>
-              <b>v2.20 (15.08.13)</b>
-              <ul>
-                <li>일본어 지원</li>
-                <li>러시아어 지원</li>
-              </ul>
-            </p><p>
-              <b>v2.10 (14.09.19)</b>
-              <ul>
-                <li>iOS8 지원</li>
-                <li>iPhone6(4.7inch), iPhone6+(5.5inch) 지원</li>
-                <li>안정화</li>
-              </ul>
-            </p><p>
-              <b>v2.00 (14.05.13)</b>
-              <ul>
-                <li>4000여개의 코드 탑재</li>
-                <li>정보화면 변경</li>
-                <li>아이패드 화면 가로,세로 전환 지원</li>
-                <li>버그 제거(소리 이슈 해결)</li>
-              </ul>
-            </p><p>
-              <b>v1.10 (14.01.14)</b>
-              <ul>
-                <li>iOS6이하에서 강제종료되는 이슈 제거</li>
-              </ul>
-            </p><p>
               <b>v1.00 (14.01.09)</b>
               <ul>
                 <li>첫 출시</li>
               </ul>
             </p>
           </div>
-          <a id="version_history_atag" onclick="clickVersionHistory()">펼쳐보기...</a>
 
 
 
