--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -540,7 +540,7 @@
             <p>
               개발자가 의도한 UI 흐름을 따르는가 에 대한 심도깊은 고민을 하였고, 그 결과물입니다. 유저를 어린아이라고 가정하고 자연스럽게 이야기를 시작한다는 느낌을 담았습니다. 어떻게 하면 재밌어할까, 어떻게하면 이 버튼에 관심을 가질까. 이런 고민들을 내내 했던것 같습니다.
             </p></p>
-              앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 컴ㅍ니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.
+              앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 커뮤니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.
             </p>
             <p>
 
