--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		ga('send', 'pageview');
 
 	</script>
-	
+
 </head>
 <body class="cover" style="background-color: hsla(0,0%,99%,1);">
 
@@ -113,56 +113,56 @@
 
       <div class="row item">
         <a class="aitem" href="#">
-          <div class="title col-md-6 col-xs-5">Roast Meister</div>
+          <div class="title col-md-6 col-xs-5">Roast Meister(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Team Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem" href="#">
-          <div class="title col-md-6 col-xs-5">Easi Calc</div>
+          <div class="title col-md-6 col-xs-5">Easi Calc(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem" href="#">
-          <div class="title col-md-6 col-xs-5">E Widget Calc</div>
+          <div class="title col-md-6 col-xs-5">E Widget Calc(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem" href="#">
-          <div class="title col-md-6 col-xs-5">Dri-Viewer</div>
+          <div class="title col-md-6 col-xs-5">Dri-Viewer(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem" href="#">
-          <div class="title col-md-6 col-xs-5">Music Tictoc</div>
+          <div class="title col-md-6 col-xs-5">Music Tictoc(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem koitem" href="#">
-          <div class="title col-md-6 col-xs-5">한글 시계</div>
+          <div class="title col-md-6 col-xs-5">한글 시계(준비중)</div>
           <div class="description col-md-6 col-xs-7">Opened Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem koitem" href="#">
-          <div class="title col-md-6 col-xs-5">공지알림서비스</div>
+          <div class="title col-md-6 col-xs-5">공지알림서비스(준비중)</div>
           <div class="description col-md-6 col-xs-7">Term Project</div>
         </a>
       </div>
 
       <div class="row item">
         <a class="aitem" href="#">
-          <div class="title col-md-6 col-xs-5">Others</div>
+          <div class="title col-md-6 col-xs-5">Others(준비중)</div>
           <div class="description col-md-6 col-xs-7">-</div>
         </a>
       </div>
