Waiting for development.

--- a/index.html
+++ b/index.html
@@ -112,56 +112,56 @@
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">Roast Meister(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Team Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">Easi Calc(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">E Widget Calc(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">Dri-Viewer(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">Music Tictoc(준비중)</div>
           <div class="description col-md-6 col-xs-7">Personal Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem koitem" href="#">
+        <a class="aitem koitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">한글 시계(준비중)</div>
           <div class="description col-md-6 col-xs-7">Opened Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem koitem" href="#">
+        <a class="aitem koitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">공지알림서비스(준비중)</div>
           <div class="description col-md-6 col-xs-7">Term Project</div>
         </a>
       </div>
 
       <div class="row item">
-        <a class="aitem" href="#">
+        <a class="aitem" href="#" disabled>
           <div class="title col-md-6 col-xs-5">Others(준비중)</div>
           <div class="description col-md-6 col-xs-7">-</div>
         </a>
