--- a/Guitar-Kit/index.html
+++ b/Guitar-Kit/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  	<title>canapio's portfolio</title>
+  	<title>canapio's portfolio :: Guitar Kit+</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:image" content="img/preview/preview_guitar-kit.jpg" />
@@ -233,7 +233,7 @@
 
 
 
-        <div class="row" style="margin-bottom: 28px;">
+        <div class="row">
 
 
           <div class="iphone_div">
@@ -320,17 +320,25 @@
       <div class="col-lg-3 col-sm-2 col-xs-0"></div>
       <div class="col-lg-6 col-sm-8 col-xs-12">
         <div class="bodydiv">
-          <div class="vimeo_container">
-            <iframe id="vimeo_iframe" class="vimeo_iframe" src="https://player.vimeo.com/video/93062717" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <div class="vimeo_body">
+            <div class="vimeo_container">
+              <iframe class="vimeo_iframe" src="https://player.vimeo.com/video/93062717?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <small>Guitar Kit+ 데모 영상</small>
+
+
+            <div class="vimeo_container">
+              <iframe class="vimeo_iframe" src="https://player.vimeo.com/video/109324931?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <small>Guitar Kit+ 인트로 영상</small>
+
+            <div class="vimeo_container">
+              <iframe class="vimeo_iframe" src="https://player.vimeo.com/video/109325635?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <small>Guitar Kit+ 아이패드 자판검색 영상</small>
+
           </div>
 
-          <div class="vimeo_container">
-            <iframe class="vimeo_iframe" src="https://player.vimeo.com/video/109324931" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-
-          <div class="vimeo_container">
-            <iframe class="vimeo_iframe" src="https://player.vimeo.com/video/109325635" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
 
 
           <h2>User Reviews</h2>
@@ -362,29 +370,21 @@
 
           <!-- 개발자 외의 사람들을 위한 소개 글 -->
           <div class="everybody_div">
+            <!-- <h2>Achievements</h2> -->
+            <h2>Social</h2>
+            <ul>
+              <li>2014년 1월 11일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2391790">1.0버전 출시 홍보</a></li>
+              <li>2014년 2월 13일 - <a target="_blank" href="http://ipodart.net/2341">ipodart 앱 리뷰</a></li>
+              <li>2014년 5월 13일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2530960">2.0버전 출시 홍보</a></li>
+              <li>2014년 11월 22일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2841435">선착순 5000명 무료 이벤트</a></li>
+              <li>2014년 11월 22일 - <a target="_blank" href="http://appsaga.com/guitar-kit/">해외 앱 리뷰</a></li>
+              <li><a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/reviews/?account_id=261008&date=2014-01-11~2016-02-11">유저 리뷰</a>(전체평점:3.9)</li>
+            </ul>
+
             <h2>Achievements</h2>
             <p>
-              <ol>
-                <li><b>높은 완성도</b></li>
-                <li><b>애플 에디터로부터 "금주의 앱"에 선정됨</b></li>
-                <li><b>유저들과의 소통</b>
-                  <ul>
-                    <li>2014년 1월 11일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2391790">1.0버전 출시 홍보</a></li>
-                    <li>2014년 2월 13일 - <a target="_blank" href="http://ipodart.net/2341">ipodart 앱 리뷰</a></li>
-                    <li>2014년 5월 13일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2530960">2.0버전 출시 홍보</a></li>
-                    <li>2014년 11월 22일 - <a target="_blank" href="http://cafe.naver.com/appleiphone/2841435">선착순 5000명 무료 이벤트</a></li>
-                    <li>2014년 11월 22일 - <a target="_blank" href="http://appsaga.com/guitar-kit/">해외 앱 리뷰</a></li>
-                    <li><a target="_blank" href="https://www.appannie.com/apps/ios/app/guitar-kit-for-chord-search/reviews/?account_id=261008&date=2014-01-11~2016-02-11">유저 리뷰</a>(전체평점:3.9)</li>
-                  </ul>
-                </li>
-              </ol>
-
-            </p>
-
-            <h2>Research</h2>
-            <p>
               개발자가 의도한 UI 흐름을 따르는가 에 대한 심도깊은 고민을 하였고, 그 결과물입니다. 유저를 어린아이라고 가정하고 자연스럽게 이야기를 시작한다는 느낌을 담았습니다. 어떻게 하면 재밌어할까, 어떻게하면 이 버튼에 관심을 가질까. 이런 고민들을 내내 했던것 같습니다.
-            </p></p>
+            </p><p>
               앱을 출시한 뒤에 개인개발자로써 해볼 수 있는 홍보를 조사해보고 적용시켜보았습니다. 마케팅 비용을 최소한으로하여 최대의 효과를 얻고자 했습니다. 국내 최대 아이폰 커뮤니티 사이트인 아사모(링크)를 위주로 홍보를 준비하였고, 생각보다 좋은 호응을 얻어내어 다운로드수와 수익에 직접적인 영향을 주었습니다.
             </p>
             <p>
@@ -446,7 +446,7 @@
             <h2>Research</h2>
             <p>
               개발자가 처음 기획할 당시 생각했던 모습과 거의 동일하게 개발되었던 몇 안되는 프로젝트 중 하나입니다. 또한 앱의 특징은 화려한 UI 애니메이션인데, 그것이 가능했던 이유는 기본 UIKit이 아닌 Cocos2D라는 게임엔진을 이용하여 만들었기 때문입니다. 따라서 시중에 나와있는 앱들과는 조금 다른, 더좋은 퍼포먼스를 자랑합니다.
-            </p></p>
+            </p><p>
               DB를 사용할 줄 모르는(DB라는 개념이 전혀 없는) 시기에 앱을 개발하였어서 수많은 기타 코드를 텍스트 파일에 저장하였습니다. 이러한 삽질이 나중에 DB를 처음 접했을때 숨통이 트이게 해주는 시너지 효과를 주기도 했습니다. 텍스트파일에 스키마를 만들고 저장하며, 사용할 때는 메인메모리에 올리고 스키마대로 잘라내어 객체들을 생성합니다. 화려한 UI애니메이션 도중에 텍스트를 불러오므로 데이터를 불러오는것 같지 않는 느낌을 유저에게 선사합니다.
             </p>
 
